--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.1.0",
     "@react-three/drei": "^9.97.3",
     "@react-three/fiber": "^8.15.16",
+    "aos": "^2.3.4",
     "framer-motion": "^11.0.3",
     "maath": "^0.10.7",
     "react": "^18.2.0",
